# kcov

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING.externals  COPYING.spdx  CPack.local.cmake  ChangeLog  Dockerfile  INSTALL  INSTALL.md  Makefile  README  README.md  elf-test.cc  index.html  kc.c  kc_addr.c  kc_elf.c  kc_file.c  kc_line.c  kc_ptrace.c  kcov.1  kprobe_coverage.c  main.c  report.c  ruff.toml  utils.c
.github/: FUNDING.yml
arch/: arch.c  x86_64.c
c64-network.org-coverage/: 1541d64.cpp.html  1541fs.cpp.html  1541job.cpp.html  1541job.h.html  1541t64.cpp.html  C64.cpp.html  C64.h.html  C64_SDL.h.html  CIA.h.html  CIA_SC.cpp.html  CPU1541.h.html  CPU1541_SC.cpp.html  CPUC64.h.html  CPUC64_SC.cpp.html  CPU_emulcycle.h.html  Display.cpp.html  IEC.cpp.html  IEC.h.html  Network.cpp.html  Network.h.html  NetworkUnix.h.html  Prefs.cpp.html  REU.cpp.html  SID.cpp.html  SID.h.html  SID_SDL.h.html  VIC_SC.cpp.html  bcov.css  bind_keys_menu.cpp.html  d64-read.c.html  data_store.cpp.html  dialogue_box.cpp.html  dialogue_box.hh.html  disc_menu.cpp.html  file_browser.cpp.html  font.hh.html  game_info.cpp.html  gui.cpp.html  (+40 more)
cmake/libdwarf/: CMakeLists.txt  test_libdwarf.c
src/: CMakeLists.txt  bin-to-c-source.py  capabilities.cc  cobertura-writer.cc  cobertura-writer.hh  collector.cc  configuration.cc  database.cc  dummy-solib-handler.cc  elf.cc  engine-factory.cc  filter.cc  gcov.cc  html-writer.cc  html-writer.hh  kc.c  kc_addr.c  kc_file.c  kc_line.c  kc_ptrace.c  kcov-merge  kprobe_coverage.c  library-binary.h  line2addr.cc  main-system-daemon.cc  main.c  main.cc  merge-file-parser.cc  merge-parser.hh  output-handler.cc  parser-manager.cc  profiler-collector.cc  profiler-main.cc  ptrace.cc  report.c  reporter.cc  solib-handler.cc  source-file-cache.cc  utils.c  utils.cc  (+2 more)
src/arch/: arch.c  arm.c  i386.c  mips32.c  ppc32.c  x86.c  x86_64.c
src/engines/: bash-engine.cc  bash-execve-redirector.c  bash-helper-debug-trap.sh  bash-helper.sh  bash-tracefd-cloexec.c  clang-coverage-engine.cc  dyninst-binary-lib.cc  dyninst-engine.cc  dyninst-file-format.cc  dyninst-file-format.hh  gcov-engine.cc  kernel-engine.cc  lldb-engine.cc  mach-engine.cc  ptrace.cc  ptrace_freebsd.cc  ptrace_linux.cc  ptrace_sys.hh  python-engine.cc  python-helper.py  script-engine-base.hh  shell-engine.cc  shell-helper-debug-trap.sh  system-mode-binary-lib.cc  system-mode-engine.cc  system-mode-file-format.cc  system-mode-file-format.hh
src/engines/osx/: mach_exc.h  mach_excServer.c
src/include/: capabilities.hh  collector.hh  configuration.hh  database.hh  disassembler.hh  elf.hh  engine.hh  file-parser.hh  filter.hh  gcov.hh  generated-data-base.hh  kc.h  kc_elf.h  kc_file.h  kc_ptrace_arch.h  lineid.hh  manager.hh  output-handler.hh  phdr_data.h  report.h  reporter.hh  solib-handler.hh  source-file-cache.hh  swap-endian.hh  utils.h  utils.hh  writer.hh
src/include/system-mode/: file-data.hh  registration.hh
src/kernel/: Makefile  kmod.c  kprobe-coverage.c
src/parsers/: address-verifier.hh  bfd-address-verifier.cc  bfd-disassembler.cc  dummy-address-verifier.cc  dummy-disassembler.cc  dwarf-libdwarf.cc  dwarf.cc  dwarf.hh  elf-parser.cc  elf.cc  libdwarf-dwarf.cpp  macho-parser.cc
src/solib-parser/: lib.c  phdr_data.c
src/system-mode/: file-data.cc  registration.cc
src/writers/: cobertura-writer.cc  cobertura-writer.hh  codecov-writer.cc  codecov-writer.hh  coveralls-writer.cc  coveralls-writer.hh  dummy-coveralls-writer.cc  html-writer.cc  html-writer.hh  json-writer.cc  json-writer.hh  nocover.cc  nocover.hh  sonarqube-xml-writer.cc  sonarqube-xml-writer.hh  writer-base.cc  writer-base.hh
tests/: CMakeLists.txt  argv-dependent.c  main.cc  pie.c  run-all.sh  sanitizer-coverage.c  short-file.c
tests/assembly/: illegal-insn.S
tests/bash/: background-child.sh  dollar-one-question.sh  dollar-var-replacements.sh  function-with-spaces.sh  handle-all-output.sh  issue-44.sh  long-output-without-return.sh  multiline-alias.sh  multiline-backslash.sh  no-executed-statements.sh  other.sh  redirect-stderr.sh  sh-shebang.sh  shell-main  short-test.sh  subshell.sh  trap.sh  unitundertest.sh
tests/bash/first-dir/: a.sh  c.sh
tests/bash/second-dir/: a.sh  b.sh
tests/daemon/: test-daemon.cc  test-issue31.cc  test-script.sh
tests/dlopen/: dlopen-main.cc  dlopen.cc
tests/fork/: fork+exec.c  fork-crash.c  fork-no-wait.c  fork.c  vfork.c
tests/global-constructors/: test-global-ctors.cc
tests/include/: header.h
tests/merge-tests/: file.c  main_1.c  main_2.c
tests/multi-fork/: code-template.c  generate-functions.py  test-multi-fork.c
tests/popen/: test-popen.c
tests/python/: echo.py  main  second.py  short-test.py
tests/python/unittest/: testdriver  testdriver.py  unitundertest.py
tests/recursive-ptrace/: main.cc
tests/robot-framework/: kcov-tests.txt
tests/setpgid-kill/: setpgid-kill-main.cc  test-script.sh
tests/shared-library/: big-symbol.S  main.c  recursive-ld-preload.c  solib.c
tests/signals/: test-signals.c
tests/subdir/: file.c
tests/subdir2/: file.c  file2.c
tests/test-module/: Makefile  test_module.c
tests/threads/: thread-main.c
tests/tools/: accumulate.py  bash.py  bash_linux_only.py  basic.py  compiled.py  compiled_basic.py  dummy-python.sh  filter.py  lookup-xml-node.py  parse_cobertura  parse_cobertura.py  python.py  run-tests  system_mode.py  test_accumulate.py  test_bash.py  test_bash_linux_only.py  test_basic.py  test_compiled.py  test_compiled_basic.py  test_filter.py  test_python.py  test_system_mode.py  testbase.py
tests/tools/libkcov/: __init__.py  __main__.py  cobertura.py  main.py
tests/unit-tests/: CMakeLists.txt  main.cc  second-source.c  test-source.c  test.hh  tests-collector.cc  tests-configuration.cc  tests-elf.cc  tests-filter.cc  tests-merge-parser.cc  tests-reporter.cc  tests-system-mode.cc  tests-utils.cc  tests-writer.cc
tests/unit-tests/mocks/: mock-collector.hh  mock-engine.hh  mock-reporter.hh
tools/: CMakeLists.txt  line2addr.cc  parse-go-macho.go
(+501 files in other folders)
